# fp-tic-tac-toe

./: .gitignore  Makefile  README.md  cabal.project  default.nix  fp-tic-tac-toe.cabal
app/: fp-tic-tac-toe.hs
nix/: pinned.json  update-nixpkgs.sh
src/FpTicTacToe/: Main.hs
test/FpTicTacToe/: MainSpec.hs
